--- a/04-WeekFour/bootstrap-instagram-clone/style.css
+++ b/04-WeekFour/bootstrap-instagram-clone/style.css
@@ -52,7 +52,8 @@ body {
 }
 
 /* Set background color for card header and footer */
-.card-header, .card-footer {
+.card-header,
+.card-footer {
     background-color: white;
 }
 
@@ -63,11 +64,12 @@ body {
 
 /* Responsive adjustments for smaller screens */
 @media (max-width: 991.98px) {
+
     /* Remove left margin from navbar brand on small screens */
     .navbar-brand {
         margin-left: 0;
     }
-    
+
     /* Hide right panel on small screens */
     .rightpanel {
         display: none;
